# grammy_erp

./: README.md  pyproject.toml
.github/workflows/: build-frontend.yml
frontend_overrides/: vite.config.ts
frontend_overrides/src/: App.tsx
frontend_overrides/src/components/Auth/: AuthGuard.tsx
frontend_overrides/src/contexts/: AuthContext.tsx
frontend_overrides/src/hooks/: useRawMaterials.ts  useVendors.ts
frontend_overrides/src/integrations/erpnext/: erpnext.ts
grammy_erp/: hooks.py  modules.txt  patches.txt
grammy_erp/grammy_erp/: __init__.py
grammy_erp/public/frontend/: index.css  index.html  index.js
grammy_erp/public/frontend/assets/: GRNReceiving-CcAvgpLS.js  InventoryManagement-dfKi4wj5.js  LogBook-CkCWEjE9.js  MaterialRequestsTab-oj6G6XyP.js  ProductionFeedbackTab-DG_XMnzj.js  ProductionVoucherDetails-FNSGG8rL.js  ProductionVoucherList-tAnaJczA.js  StockReconciliation-BX7zGura.js  browser-D6U2I0nG.js  index.es-CQqejOrw.js
grammy_erp/setup/: __init__.py  supplier_custom_fields.py
grammy_erp/www/: grammy.html  grammy.py
