[project]
name = "grammy_erp"
authors = [{ name = "Grammy Electronics", email = "ankitmalhotra92@gmail.com" }]
description = "Grammy ERP custom app: same-origin front-end serving + Grammy customizations on ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "grammy_erp"
